aws-terraform/terraform-concepts/terraform-resources-reference/example-05/sg.tf
resource "aws_security_group" "example" {
  name        = "example"
  vpc_id      = aws_vpc.example_vpc.id
  description = "Allow SSH and HTTP inbound traffic"
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
